cdk.out.stg/MTI-stg-NetworkStack.template.json
{
 "Description": "[stg] MTI ビデオシステム - ネットワーク基盤スタック",
 "Resources": {
  "Vpc": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-vpc"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/Vpc"
   }
  },
  "PublicSubnet1a": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-public-subnet-1a"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PublicSubnet1a"
   }
  },
  "PublicSubnet1c": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-public-subnet-1c"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PublicSubnet1c"
   }
  },
  "PrivateSubnet1a": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.11.0/24",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-private-subnet-1a"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PrivateSubnet1a"
   }
  },
  "PrivateSubnet1c": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.12.0/24",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-private-subnet-1c"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PrivateSubnet1c"
   }
  },
  "DbSubnet1a": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.21.0/24",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-db-subnet-1a"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/DbSubnet1a"
   }
  },
  "DbSubnet1c": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.22.0/24",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-db-subnet-1c"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/DbSubnet1c"
   }
  },
  "Igw": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-igw"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/Igw"
   }
  },
  "IgwAttachment": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "Igw"
    },
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/IgwAttachment"
   }
  },
  "RegionalNatGateway": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AvailabilityMode": "regional",
    "ConnectivityType": "public",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-regional-nat-gw"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/RegionalNatGateway"
   }
  },
  "PublicRouteTable": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-public-rtb"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PublicRouteTable"
   }
  },
  "PublicDefaultRoute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "Igw"
    },
    "RouteTableId": {
     "Ref": "PublicRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PublicDefaultRoute"
   }
  },
  "PublicSubnet1aRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PublicRouteTable"
    },
    "SubnetId": {
     "Ref": "PublicSubnet1a"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PublicSubnet1aRta"
   }
  },
  "PublicSubnet1cRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PublicRouteTable"
    },
    "SubnetId": {
     "Ref": "PublicSubnet1c"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PublicSubnet1cRta"
   }
  },
  "PrivateRouteTable": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-private-rtb"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PrivateRouteTable"
   }
  },
  "PrivateDefaultRoute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "RegionalNatGateway"
    },
    "RouteTableId": {
     "Ref": "PrivateRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PrivateDefaultRoute"
   }
  },
  "PrivateSubnet1aRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PrivateRouteTable"
    },
    "SubnetId": {
     "Ref": "PrivateSubnet1a"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PrivateSubnet1aRta"
   }
  },
  "PrivateSubnet1cRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PrivateRouteTable"
    },
    "SubnetId": {
     "Ref": "PrivateSubnet1c"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/PrivateSubnet1cRta"
   }
  },
  "DbRouteTable": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-stg-db-rtb"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/DbRouteTable"
   }
  },
  "DbSubnet1aRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DbRouteTable"
    },
    "SubnetId": {
     "Ref": "DbSubnet1a"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/DbSubnet1aRta"
   }
  },
  "DbSubnet1cRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DbRouteTable"
    },
    "SubnetId": {
     "Ref": "DbSubnet1c"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/DbSubnet1cRta"
   }
  },
  "S3GatewayEndpoint": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "PublicRouteTable"
     },
     {
      "Ref": "PrivateRouteTable"
     },
     {
      "Ref": "DbRouteTable"
     }
    ],
    "ServiceName": "com.amazonaws.ap-northeast-1.s3",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/S3GatewayEndpoint"
   }
  },
  "EndpointSg9223A863": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "VPC Interface Endpoint 用セキュリティグループ",
    "GroupName": "MTI-VideoSystem-stg-endpoint-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.0.0.0/16",
      "Description": "VPC 内部からの HTTPS アクセスを許可",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/EndpointSg/Resource"
   }
  },
  "EcrApiEndpointB01DFFD7": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "EndpointSg9223A863",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.ap-northeast-1.ecr.api",
    "SubnetIds": [
     {
      "Ref": "PrivateSubnet1a"
     },
     {
      "Ref": "PrivateSubnet1c"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/EcrApiEndpoint/Resource"
   }
  },
  "EcrDkrEndpoint2A32680E": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "EndpointSg9223A863",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.ap-northeast-1.ecr.dkr",
    "SubnetIds": [
     {
      "Ref": "PrivateSubnet1a"
     },
     {
      "Ref": "PrivateSubnet1c"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/EcrDkrEndpoint/Resource"
   }
  },
  "CloudWatchLogsEndpointF23EDC4F": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "EndpointSg9223A863",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.ap-northeast-1.logs",
    "SubnetIds": [
     {
      "Ref": "PrivateSubnet1a"
     },
     {
      "Ref": "PrivateSubnet1c"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/CloudWatchLogsEndpoint/Resource"
   }
  },
  "SecretsManagerEndpoint5E83C66B": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "EndpointSg9223A863",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.ap-northeast-1.secretsmanager",
    "SubnetIds": [
     {
      "Ref": "PrivateSubnet1a"
     },
     {
      "Ref": "PrivateSubnet1c"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "stg"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/SecretsManagerEndpoint/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/1WOzQrCQAyEn8X7dm2LeJci4kWkFa+Spiluq9mym7WI+O5i/amekpl8MyTV6TzR8QR6H2HVRidT6lshgK2C3h8IU33Lat5vM5XVXISSSZ7bmoUck6xAqIerejFvtRABPJ6JB3QDv1Rug9AOyhN91dg8HhfeWzQgxvK7e8lVZw2LKgiDM3JdORu6IftnDJ/VgLTv8JO5q5y8DQ7prthWpBs/vaQzncx1PGm8MZELLOZMOn/NBxcah74XAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "MTI-stg-NetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefVpc0040386A": {
   "Value": {
    "Ref": "Vpc"
   },
   "Export": {
    "Name": "MTI-stg-NetworkStack:ExportsOutputRefVpc0040386A"
   }
  },
  "ExportsOutputRefDbSubnet1a4E62FE79": {
   "Value": {
    "Ref": "DbSubnet1a"
   },
   "Export": {
    "Name": "MTI-stg-NetworkStack:ExportsOutputRefDbSubnet1a4E62FE79"
   }
  },
  "ExportsOutputRefDbSubnet1cEEE0C4A4": {
   "Value": {
    "Ref": "DbSubnet1c"
   },
   "Export": {
    "Name": "MTI-stg-NetworkStack:ExportsOutputRefDbSubnet1cEEE0C4A4"
   }
  },
  "ExportsOutputRefPublicSubnet1a1DA531A5": {
   "Value": {
    "Ref": "PublicSubnet1a"
   },
   "Export": {
    "Name": "MTI-stg-NetworkStack:ExportsOutputRefPublicSubnet1a1DA531A5"
   }
  },
  "ExportsOutputRefPublicSubnet1c732EA97F": {
   "Value": {
    "Ref": "PublicSubnet1c"
   },
   "Export": {
    "Name": "MTI-stg-NetworkStack:ExportsOutputRefPublicSubnet1c732EA97F"
   }
  },
  "ExportsOutputRefPrivateSubnet1a21647B63": {
   "Value": {
    "Ref": "PrivateSubnet1a"
   },
   "Export": {
    "Name": "MTI-stg-NetworkStack:ExportsOutputRefPrivateSubnet1a21647B63"
   }
  },
  "ExportsOutputRefPrivateSubnet1c0B9AC203": {
   "Value": {
    "Ref": "PrivateSubnet1c"
   },
   "Export": {
    "Name": "MTI-stg-NetworkStack:ExportsOutputRefPrivateSubnet1c0B9AC203"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
